--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "babel-preset-react": "^6.24.1",
     "express": "^4.16.4",
     "path": "^0.12.7",
+    "pg": "^7.5.0",
+    "pg-hstore": "^2.3.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "sequelize": "^4.41.0",
     "webpack": "^3.11.0"
   }
 }
