--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "homepage": "https://github.com/Staybnb/Neighborhood#readme",
   "devDependencies": {
     "jest": "^22.3.0",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "puppeteer": "^1.9.0"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
@@ -37,6 +38,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "sequelize": "^4.41.0",
-    "webpack": "^3.11.0"
+    "webpack": "^3.11.0",
+    "webpack-cli": "^3.1.2"
   }
 }
