--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "pg-hstore": "^2.3.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-google-maps": "^9.4.5",
     "sequelize": "^4.41.0",
     "webpack": "^3.11.0",
     "webpack-cli": "^3.1.2"
