--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "turf": "^3.0.14"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
