--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "turf": "^3.0.14"
   },
   "dependencies": {
+    "@turf/distance": "^6.0.1",
+    "@turf/turf": "^5.1.6",
     "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
