--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "seed": "node ./server/models/loadData.js",
     "react-dev": "webpack -d --watch",
     "start-dev": "nodemon ./server/server.js",
-    "test": "jest"
+    "test": "jest",
+    "connect": "ssh -i \"neighborhood-ec2-keypair.pem\" ubuntu@ec2-3-16-89-66.us-east-2.compute.amazonaws.com"
   },
   "repository": {
     "type": "git",
