--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dev": "webpack -d --watch",
     "start-dev": "nodemon ./server/server.js",
     "test": "jest",
+    "start-aws": "pm2 start ./server/server.js",
     "connect": "ssh -i \"neighborhood-ec2-keypair.pem\" ubuntu@ec2-3-16-89-66.us-east-2.compute.amazonaws.com"
   },
   "repository": {
