--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "jest",
     "start-aws": "pm2 start ./server/server.js",
     "listpm2": "pm2 list",
+    "pm2server": "pm2 show server",
     "connect": "ssh -i \"neighborhood-ec2-keypair.pem\" ubuntu@ec2-3-16-89-66.us-east-2.compute.amazonaws.com"
   },
   "repository": {
