Make better names for package.json scripts and client data request

--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "react-dev": "webpack -d --watch",
     "start-dev": "nodemon ./server/server.js",
     "test": "jest",
-    "start-aws": "pm2 start ./server/server.js",
-    "listpm2": "pm2 list",
-    "pm2server": "pm2 show server",
-    "pm2stop": "pm2 stop 0",
-    "connect": "ssh -i \"neighborhood-ec2-keypair.pem\" ubuntu@ec2-3-16-89-66.us-east-2.compute.amazonaws.com"
+    "connect": "ssh -i \"neighborhood-ec2-keypair.pem\" ubuntu@ec2-3-16-89-66.us-east-2.compute.amazonaws.com",
+    "start-pm2": "pm2 start ./server/server.js",
+    "list-pm2": "pm2 list",
+    "show-server-pm2": "pm2 show server",
+    "stop-pm2": "pm2 stop 0"
   },
   "repository": {
     "type": "git",
