--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "start-pm2": "pm2 start ./server/server.js",
     "list-pm2": "pm2 list",
     "show-server-pm2": "pm2 show server",
-    "stop-pm2": "pm2 stop 0",
-    "seed-all": "npm run seed && npm run seed  && npm run seed  && npm run seed  && npm run seed  && npm run seed  && npm run seed  && npm run seed  && npm run seed  && npm run seed  && npm run seed  && npm run seed"
+    "stop-pm2": "pm2 stop 0"
   },
   "repository": {
     "type": "git",
