Refactor postgres data generation and load

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "neighborhood",
   "version": "1.0.0",
-  "description": "This is the 'Neighborhood' module of the Staybnb application.",
+  "description": "This is the 'Neighborhood' module of the Top Bunk application.",
   "main": "bundle.js",
   "scripts": {
     "build": "webpack",
     "start": "node ./server/server.js",
-    "seed": "node --max-old-space-size=6148 ./server/models/loadData.js",
+		"seed": "node ./server/models/dummyData/populate.js",
+		"load": "node ./server/models/dummyData/listingGeneration.js",
     "react-dev": "webpack -d --watch",
     "react-prod": "webpack -p",
     "start-dev": "nodemon ./server/server.js",
@@ -46,9 +47,12 @@
     "babel-preset-react": "^6.24.1",
     "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
+    "csv-write-stream": "^2.0.0",
     "db-streamer": "^1.2.1",
     "express": "^4.16.4",
     "faker": "^4.1.0",
+    "json2csv": "^4.3.0",
+    "jsonexport": "^2.3.0",
     "lorem-ipsum": "^1.0.6",
     "npm-run-series": "^1.0.1",
     "path": "^0.12.7",
