--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dev": "webpack -d --watch",
     "react-prod": "webpack -p",
     "start-dev": "nodemon ./server/server.js",
+    "babel": "babel-node ./server/server.js",
     "test": "jest",
     "connect": "ssh -i \"neighborhood-ec2-keypair.pem\" ubuntu@ec2-3-16-89-66.us-east-2.compute.amazonaws.com",
     "start-pm2": "pm2 start ./server/server.js",
@@ -29,6 +30,11 @@
   },
   "homepage": "https://github.com/Staybnb/Neighborhood#readme",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "jest": "^22.3.0",
     "morgan": "^1.9.0",
     "parallelshell": "^3.0.1",
@@ -37,14 +43,11 @@
     "turf": "^3.0.14"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.0.0",
     "@turf/distance": "^6.0.1",
     "@turf/turf": "^5.1.6",
     "axios": "^0.18.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
     "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
     "csv-write-stream": "^2.0.0",
