--- a/package.json
+++ b/package.json
@@ -5,15 +5,13 @@
   "main": "bundle.js",
   "scripts": {
     "build": "webpack",
-    "start": "node ./server/server.js",
+    "start": "node ./server/babelServer.js",
     "seed": "node ./server/models/dummyData/populate.js",
     "load": "node ./server/models/dummyData/listingGeneration.js",
     "react-dev": "webpack -d --watch",
     "react-prod": "webpack -p",
-    "start-dev": "nodemon ./server/server.js",
-    "babel": "babel-node ./server/server.js",
+    "start-dev": "nodemon ./server/babelServer.js",
     "test": "jest",
-    "connect": "ssh -i \"neighborhood-ec2-keypair.pem\" ubuntu@ec2-3-16-89-66.us-east-2.compute.amazonaws.com",
     "start-pm2": "pm2 start ./server/server.js",
     "list-pm2": "pm2 list",
     "show-server-pm2": "pm2 show server",
@@ -21,20 +19,21 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Staybnb/Neighborhood.git"
+    "url": "git+https://github.com/TopBunkNYC/Neighborhood"
   },
   "author": "Kai Chen",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Staybnb/Neighborhood/issues"
+    "url": "https://github.com/TopBunkNYC/Neighborhood"
   },
-  "homepage": "https://github.com/Staybnb/Neighborhood#readme",
+  "homepage": "https://github.com/TopBunkNYC/Neighborhood",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
     "jest": "^22.3.0",
     "morgan": "^1.9.0",
     "parallelshell": "^3.0.1",
@@ -47,6 +46,7 @@
     "@turf/distance": "^6.0.1",
     "@turf/turf": "^5.1.6",
     "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
@@ -69,6 +69,7 @@
     "react-dom": "^16.2.0",
     "react-google-maps": "^9.4.5",
     "redis": "^2.8.0",
+    "regenerator-runtime": "^0.13.1",
     "sequelize": "^4.41.0",
     "webpack": "^3.11.0",
     "webpack-cli": "^3.1.2"
