--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "start-pm2": "pm2 start ./server/server.js",
     "list-pm2": "pm2 list",
     "show-server-pm2": "pm2 show server",
-    "stop-pm2": "pm2 stop 0"
+		"stop-pm2": "pm2 stop 0",
+		"go-seed": "go run ./server/models/dummyData/csv-generator-go/csv-generator.go"
   },
   "repository": {
     "type": "git",
